tests/semantic/pass/nil-6.tiger
let
	type a = {}
	var b := a {}
in
	b := nil
end
